--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,7 +15,7 @@
 </head>
 
   <body>
-    <nav>
+    <nav class="top-nav">
       <a href="">Services</a>
       <a href="">Product</a>
       <a href="">Vision</a>
@@ -24,13 +24,16 @@
       <a href="">Contact</a>
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </nav>
-    <section>
-      <h1>
-        Innovation
-        On
-        Demand
-      </h1>
-      <button>Get Started</button>
+    <section class="sec-1">
+      <div class="sec-1-div">
+        <h1>
+          Innovation
+          On
+          Demand
+        </h1>
+        <button>Get Started</button>
+      </div>
+
     
 
       <img src="img/header-img.png" alt="Image of a code snippet.">
